tests/baselines/reference/unusedPrivateVariableInClass2.errors.txt
tests/cases/compiler/unusedPrivateVariableInClass2.ts(2,13): error TS6133: 'x' is declared but never used.
tests/cases/compiler/unusedPrivateVariableInClass2.ts(3,13): error TS6133: 'y' is declared but never used.


==== tests/cases/compiler/unusedPrivateVariableInClass2.ts (2 errors) ====
    class greeter {
        private x: string;
                ~
!!! error TS6133: 'x' is declared but never used.
        private y: string;
                ~
!!! error TS6133: 'y' is declared but never used.
    }